--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jellyamp",
-  "version": "1.1.1",
+  "version": "1.1.1a",
   "private": true,
   "description": "Desktop client for listening to music from a Jellyfin server",
   "license": "MIT",
