mac artifact naming

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,6 +3,7 @@ appId: me.ipson.jellyamp
 compression: normal
 
 mac:
+  artifactName: ${name}-${version}-mac-${arch}.${ext}
   category: Audio
   icon: ./icons/icon.icns
   target:
