--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -8,6 +8,9 @@ mac:
   icon: ./icons/icon.icns
   target:
     - target: dmg
+      arch:
+        - arm64
+        - x64
 
   hardenedRuntime: true
   gatekeeperAssess: false
